feat: 偏函数, 组合函数

--- a/前端自检.md
+++ b/前端自检.md
@@ -672,27 +672,55 @@ function deepCopy(object) {
 ```
 
 
-3. 手写函数柯里化工具函数、并理解其应用场景和优势
+3. 手写函数柯里化/偏函数/组合函数 工具函数、并理解其应用场景和优势
 ```js
-function curry(fn, ...curryArgs) {
-  return (...args) => {
-    const newArgs = [...curryArgs, ...args];
-
+// 柯里化
+function curry (fn) {
+  return function curried (...args) {
     // 参数数量不足
-    if(newArgs.length < fn.length) {
-      return curry(fn, ...newArgs);
+    if (args.length < fn.length) {
+      return function (...restArgs) {
+        return curried(...args, ...restArgs);
+      };
     }
     else {
-      return fn(...newArgs);
+      return fn(...args);
     }
   };
 }
 
-function multi (a, b, c) {
-  return a * b * c;
+function toCurryLog (a, b, c) {
+  console.log(`${a},${b},${c}`);
 }
-var multiCurry = curry(multi, 2, 3);
-console.log(multiCurry(9));
+
+const curryLog = curry(toCurryLog);
+curryLog(1)(2, 3);
+
+// 偏函数
+function partial (fn, ...bindArgs) {
+  return function (...args) {
+    return fn(...bindArgs, ...args);
+  };
+}
+
+function toPartialLog (a, b, c) {
+  console.log(`${a},${b},${c}`);
+}
+
+const partialLog = partial(toPartialLog, 1, 2);
+partialLog(3);
+
+// 组合
+function compose (...fns) {
+  return (value) => {
+    return fns.reduceRight((prev, fn) => fn(prev), value);
+  };
+}
+
+var toUpperCase = function (x) { return x.toUpperCase(); };
+var exclaim = function (x) { return x + '!'; };
+var shout = compose(exclaim, toUpperCase);
+shout('send in the clowns');
 ```
 
 
