--- a/前端自检.md
+++ b/前端自检.md
@@ -786,7 +786,7 @@ Function.prototype._bind = function(context, ...args) {
 }
 ```
 
-2. 手动实现符合Promise/A+规范的Promise、手动实现async await
+2. 手动实现符合Promise/A+规范的Promise、手动实现async await //todo
 ```js
 class _Promise {
   constructor(init) {
@@ -839,7 +839,9 @@ class EventEmitter {
 1. 可计算一个算法的时间复杂度和空间复杂度，可估计业务逻辑代码的耗时和内存消耗
 
 
-2. 至少理解五种排序算法的实现原理、应用场景、优缺点，可快速说出时间、空间复杂度
+2. 至少理解五种排序算法的实现原理、应用场景、优缺点，可快速说出时间、空间复杂度 //todo
+   1. 选择
+   1. 快速
 
 
 3. 了解递归和循环的优缺点、应用场景、并可在开发中熟练应用
