--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -10,6 +10,7 @@
 2. 水平垂直居中
 3. 布局
    - 两栏, 三栏
+   -[圣杯布局和双飞翼布局的理解与思考](https://www.jianshu.com/p/81ef7e7094e8)
 4. flex
    1. flex-flow: flex-wrap, flex-direction
    2. flex: flex-grow, flex-shrink: 0(不缩小), flex-basis
@@ -50,6 +51,20 @@
     // 设值
     el.style.setProperty('--color', '#fff');
     ```
+1. 清除浮动
+   1. 添加clear: both; 额外标签
+   1. overflow: hidden;
+   1. :after + clear: both
+1. flex分别有哪些方法用于容器和项目
+   1. 容器
+      1. flex-flow (flex-direction, flex-wrap)
+      1. align-items
+      1. justify-content
+      1. align-content: 多轴时有效
+   1. 项目
+      1. flex (flex-grow, flex-shrink, flex-basis)
+      1. align-self
+      1. order
 
 ## JavaScript
 1. 原型
@@ -173,6 +188,14 @@
 1. Promise, async/await
    - [Promise开发文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 - [「中高级前端面试」JavaScript手写代码无敌秘籍](https://juejin.im/post/5c9c3989e51d454e3a3902b6)
+1. 设计模式 //todo
+   1. 原型模式
+   1. 构造函数模式
+   1. 混合模式
+   1. 模块模式
+   1. 单例模式
+   1. 观察者模式
+   1. 发布/订阅模式
 
 ## 综合
 1. 跨域
@@ -253,6 +276,11 @@
    1. 注册
    1. install事件缓存文件
    1. 拦截请求读取缓存
+1. CDN原理
+   1. 负载均衡
+   1. 动态分发和复制
+   1. 缓存
+   > CDN网络是在用户和服务器之间增加Cache层，主要是通过接管DNS实现，将用户的请求引导到Cache上获得源服务器的数据，从而降低网络的访问的速度。
    
 ## 移动端
 1. 移动端与PC端区别
@@ -297,6 +325,19 @@
 - [Vuex面试题汇总](https://juejin.im/post/5dba91e4518825647e4ef18b)
 
 ## React
+1. react性能优化
+   > react-addons-perf性能工具
+   1. 合理规划state, 避免不必要的render调用
+   1. 重写shouldComponentUpdate避免重复渲染
+   1. 使用不可突变数据结构
+   1. props按需传递
+   1. 合并状态更新
+   1. 使用函数组件
+   1. 使用PureComponent
+1. react setstate为什么是异步的
+   1. 保持内部一致性
+   1. 能够使用并发更新，从而优化性能
+   - [为什么React.setState是异步的？](https://www.jianshu.com/p/c19e259870a5)
 - [35 道咱们必须要清楚的 React 面试题](https://juejin.im/post/5dc20a4ff265da4d4e30040b)
 - [React Fiber 原理介绍](https://segmentfault.com/a/1190000018250127?utm_source=tag-newest)
 - [react hooks 使用](https://segmentfault.com/a/1190000019513907)
@@ -367,7 +408,19 @@ ref | 字符 | createRef(类), useRef(函数)
       1. DOM+CSSOM -> render树
       1. render树 -> 计算节点, 进行布局
       1. render树 -> 绘制渲染所有节点
+      - [浏览器渲染原理与过程](https://www.jianshu.com/p/e6252dc9be32)
    - [浏览器从输入URL到渲染完页面的整个过程](https://www.cnblogs.com/qing-5/p/11126524.html)
+1. 如何提升渲染性能
+   1. 样式在head, 脚本在body结束前, 防止阻塞
+   1. 简化和优化css选择器, 减少嵌套
+   1. 合并DOM操作
+   1. 合并样式操作
+   1. 缓存读取到的会引起重排的样式
+   1. 使用transform形变和位移
+   1. 使用离线DOM(documentFragment)
+   1. 使用visibility
+   1. 先将元素display: none, 再进行DOM操作
+   1. 使用requestAnimationFrame
 - [你不知道的浏览器页面渲染机制](https://juejin.im/post/5ca0c0abe51d4553a942c17d)
 
 ## 小程序
@@ -428,6 +481,13 @@ ref | 字符 | createRef(类), useRef(函数)
    2. 服务端 -> 客户端: ACK; CLOSE-WAIT
    3. 服务端 -> 客户端: FIN,ACK; LAST-ACK
    4. 客户端 -> 服务端: ACK; 2MSL(最长报文寿命)后关闭, CLOSED
+1. TCP与UDP的区别
+   1. TCP面向连接; UDP是无连接的, 发送数据前不需要建立连接
+   1. TCP提供可靠服务; UDP尽最大努力交付, 不保证可靠交付
+   1. UDP有较高的实时性, 效率比TCP高, 适用于实时高速传输
+   1. TCP连接只能点到点; UDP支持多对多通信
+   1. TCP资源要求较多; UCP较少
+1. [TCP拥塞控制机制](https://blog.csdn.net/shuxnhs/article/details/80644531)
    
 ## 算法
 1. 冒泡排序
@@ -446,6 +506,27 @@ ref | 字符 | createRef(类), useRef(函数)
 1. 跨端native开发: electron; weex, react-native, flutter
 - [2019年前端大事件回顾：流年笑掷，未来可期](https://juejin.im/post/5def782ce51d4558181d27ce)
 - [2020年大前端发展趋势](https://juejin.im/post/5ddb487ce51d452349622d7f)
+
+## 编辑
+1. 如何实现提案中的flat函数（参数为几就拆解几层数组）
+```js
+Array.prototype._flat = function (level) {
+  function helper (array, level) {
+    const res = [];
+    array.forEach((item) => {
+      if (level > 0 && Array.isArray(item)) {
+        res.push(...helper(item, level - 1));
+      }
+      else {
+        res.push(item);
+      }
+    });
+    return res;
+  }
+
+  return helper(this, level);
+};
+```
 
 ## 面试题汇总
 - [前端面试题及答案汇总](https://github.com/Advanced-Frontend/Daily-Interview-Question/blob/master/datum/summary.md)
