--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -65,6 +65,16 @@
       1. flex (flex-grow, flex-shrink, flex-basis)
       1. align-self
       1. order
+1. css性能优化
+   1. 内联首屏css
+   1. 异步加载非首屏css
+   1. css文件压缩
+   1. 去除无用css
+   1. 简化选择器层级
+   1. 减少使用耗性能的属性: box-shadow, filter等
+   1. 减少重排重绘
+   1. 不使用@import
+   1. 使用硬件加速: will-change
 
 ## JavaScript
 1. 原型
@@ -188,7 +198,7 @@
 1. Promise, async/await
    - [Promise开发文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 - [「中高级前端面试」JavaScript手写代码无敌秘籍](https://juejin.im/post/5c9c3989e51d454e3a3902b6)
-1. 设计模式 //todo
+1. 设计模式
    1. 原型模式
    1. 构造函数模式
    1. 混合模式
@@ -331,7 +341,7 @@
    1. 重写shouldComponentUpdate避免重复渲染
    1. 使用不可突变数据结构
    1. props按需传递
-   1. 合并状态更新
+   1. 合并状态更新, 避免多次渲染
    1. 使用函数组件
    1. 使用PureComponent
 1. react setstate为什么是异步的
@@ -488,6 +498,14 @@ ref | 字符 | createRef(类), useRef(函数)
    1. TCP连接只能点到点; UDP支持多对多通信
    1. TCP资源要求较多; UCP较少
 1. [TCP拥塞控制机制](https://blog.csdn.net/shuxnhs/article/details/80644531)
+1. 讲述一下计算机网络的七层
+   1. 应用层
+   1. 表示层
+   1. 会话层
+   1. 传输层
+   1. 网络层
+   1. 数据链路层
+   1. 物理层
    
 ## 算法
 1. 冒泡排序
@@ -498,6 +516,79 @@ ref | 字符 | createRef(类), useRef(函数)
 1. 合并两个有序链表
 1. 二叉树的最大深度
 - [上LeetCode刷题吧](https://leetcode-cn.com/problemset/all/): 一般只考简单,中等难度
+```js
+// 冒泡排序
+function bubbleSort (nums) {
+  const { length } = nums;
+
+  for (let i = 0; i < length - 1; i++) {
+    for (let j = 0; j < length - i - 1; j++) {
+      const cur = nums[j];
+      const next = nums[j + 1];
+      if (cur > next) {
+        nums[j + 1] = cur;
+        nums[j] = next;
+      }
+    }
+  }
+
+  return nums;
+}
+
+// 快速排序
+function quickSort (nums) {
+  if (nums.length <= 1) {
+    return nums;
+  }
+
+  const left = [];
+  const right = [];
+  const cur = nums.pop();
+
+  for (const num of nums) {
+    if (num > cur) {
+      right.push(num);
+    }
+    else {
+      left.push(num);
+    }
+  }
+
+  return quickSort(left).concat(cur, quickSort(right));
+}
+
+// 选择排序
+function selectSort (nums) {
+  for (let i = 0; i < nums.length - 1; i++) {
+    for (let j = i + 1; j < nums.length; j++) {
+      if (nums[i] > nums[j]) {
+        [nums[i], nums[j]] = [nums[j], nums[i]];
+      }
+    }
+  }
+
+  return nums;
+}
+
+// 归并排序
+function mergeSort (nums) {
+  if (nums.length <= 1) {
+    return nums;
+  }
+
+  let mid = ~~(nums.length / 2);
+
+  return mergeSortHelper(mergeSort(nums.slice(0, mid)), mergeSort(nums.slice(mid)));
+}
+function mergeSortHelper (left, right) {
+  const res = [];
+  while (left.length && right.length) {
+    // 不断比较left,right第一项, 取出较小的
+    left[0] < right[0] ? res.push(left.shift()) : res.push(right.shift());
+  }
+  return res.concat(left, right);
+}
+```
 
 ## 前端趋势
 1. TypeScript
@@ -507,7 +598,7 @@ ref | 字符 | createRef(类), useRef(函数)
 - [2019年前端大事件回顾：流年笑掷，未来可期](https://juejin.im/post/5def782ce51d4558181d27ce)
 - [2020年大前端发展趋势](https://juejin.im/post/5ddb487ce51d452349622d7f)
 
-## 编辑
+## 编程
 1. 如何实现提案中的flat函数（参数为几就拆解几层数组）
 ```js
 Array.prototype._flat = function (level) {
