--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -138,27 +138,29 @@
    - [require/import](https://www.jianshu.com/p/f1e54dde30c8)
 7. this
 8. 防抖/节流
-    ```js
-    // 防抖: 多次调用, 运行1次
-    function debounce(fn, timeout = 300) {
-      clearTimeout(fn._tid);
-      fn._tid = setTimeout(fn, timeout);
-    }
-    
-    // 节流: 多次调用, 每个时间间隔运行1次
-    function throttle(fn, timeout = 300) {
-      if (fn._pending) {
-        return;
-      }
-      
-      fn();
-      fn._pending = true;
-    
-      setTimeout(() => {
-        fn._pending = false;
-      }, timeout);
-    }
-    ```
+   ```js
+   // 防抖: 多次调用, 运行1次
+   function debounce (fn, timeout = 300) {
+     return function (...args) {
+       clearTimeout(fn._tid);
+       fn._tid = setTimeout(() => {
+         fn.call(this, ...args);
+       }, timeout);
+     };
+   }
+   
+   // 节流: 多次调用, 每个时间间隔运行1次
+   function throttle (fn, timeout = 300) {
+     let start = Date.now();
+     return function (...args) {
+       const now = Date.now();
+       if (now - start >= timeout) {
+         fn.call(this, ...args);
+         start = now;
+       }
+     };
+   }
+   ```
 9. ES6/ES7
    1. const/let
    2. 新数据类型: Set/Map
