--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -217,12 +217,42 @@
    1. iframe
    1. 代理: devServer/后端/Nginx
 1. 性能优化
-   1. 减少http请求次数: 合并静态资源, 雪碧图, 强缓存, localStorage/sessionStorage, ajax缓存, combo服务, 小图片base64内嵌
-   1. 减少http请求大小: 压缩静态资源, gzip, 协商缓存, 减小cookie及cookie隔离, 压缩比更高的图片(webp), 根据屏幕尺寸返回适合尺寸图片
-   1. 优化网络加载: 分域CDN, 减少重定向, 预加载, dns预解析
-   1. 根据渲染原理优化: css放头部, js放脚部, 避免css import, 阻塞渲染的css/js合理拆分延迟加载, 图片懒加载
-   1. 提升代码运行性能: 避免重排(预设图片尺寸, 避免width,left等修改), 减少js动画, css动画, GPU加速, 避免使用table/iframe
-   1. 使用新技术: http2多路复用, PWA, ServiceWorker
+   1. 网络
+      1. 减少http请求次数
+         1. 合并静态资源, 雪碧图, combo服务
+         1. 强缓存, localStorage/sessionStorage, ajax缓存
+         1. 小图片base64内嵌
+         1. ServiceWorker
+      1. 减少http请求大小
+         1. 压缩静态资源, gzip
+         1. 协商缓存
+         1. 减小cookie及cookie隔离
+         1. 压缩比更高的图片(webp)
+         1. 根据屏幕尺寸返回适合尺寸图片
+      1. 优化网络加载
+         1. CDN
+         1. http2多路复用
+         1. 减少重定向
+         1. 预加载, dns预解析
+   1. 渲染
+      1. 避免重排/重绘         
+         1. 合并多次DOM操作
+         1. 合并多次样式操作
+         1. 先将元素display: none, 进行多次操作, 再恢复显示
+         1. 需要重排获取到的样式属性, 储存下来
+         1. 使用离线DOM(documentFragment)
+         1. 绝对定位
+         1. 使用visibility
+         1. 预设图片尺寸
+      1. 减少js动画, 使用css动画(transform)
+      1. GPU加速
+      1. 使用requestAnimationFrame, requestIdleCallback重新渲染
+   1. 性能
+      1. css放头部, js放脚部
+      1. 避免css import
+      1. 阻塞渲染的css/js合理拆分延迟加载
+      1. 图片懒加载
+      1. 避免使用table/iframe
    - [前端性能优化最佳实践](https://csspod.com/frontend-performance-best-practices/)
    - [前端那些事儿」② 极限性能优化](https://juejin.im/post/59ff2dbe5188254dd935c8ab)
 1. 首屏计算
