--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -36,21 +36,21 @@
    1. animation/keyframes
    1. transform
 1. CSS原生变量
-```less
-.test {
-  // 定义
-  --color: #f00;
-  // 使用
-  color: var(--color);
-}
-```
-```js
-const el = document.querySelector('.test');
-// 取值
-getComputedStyle(el).getPropertyValue('--color');
-// 设值
-el.style.setProperty('--color', '#fff');
-```
+    ```less
+    .test {
+      // 定义
+      --color: #f00;
+      // 使用
+      color: var(--color);
+    }
+    ```
+    ```js
+    const el = document.querySelector('.test');
+    // 取值
+    getComputedStyle(el).getPropertyValue('--color');
+    // 设值
+    el.style.setProperty('--color', '#fff');
+    ```
 1. 清除浮动
    1. 添加clear: both; 额外标签
    1. overflow: hidden;
@@ -88,8 +88,8 @@ el.style.setProperty('--color', '#fff');
    1. Block 
     ```js
     const scriptVar = 1;
-    window.windowVar = 1;
-    var windowVar2 = 1;
+    window.globalVar = 1;
+    var globalVar2 = 1;
     (function () {
       const localVar = 1;
       if (1) {
@@ -632,24 +632,24 @@ function mergeSortHelper (left, right) {
 
 ## 编程
 1. 如何实现提案中的flat函数（参数为几就拆解几层数组）
-```js
-Array.prototype._flat = function (level) {
-  function helper (array, level) {
-    const res = [];
-    array.forEach((item) => {
-      if (level > 0 && Array.isArray(item)) {
-        res.push(...helper(item, level - 1));
+    ```js
+    Array.prototype._flat = function (level) {
+      function helper (array, level) {
+        const res = [];
+        array.forEach((item) => {
+          if (level > 0 && Array.isArray(item)) {
+            res.push(...helper(item, level - 1));
+          }
+          else {
+            res.push(item);
+          }
+        });
+        return res;
       }
-      else {
-        res.push(item);
-      }
-    });
-    return res;
-  }
-
-  return helper(this, level);
-};
-```
+    
+      return helper(this, level);
+    };
+    ```
 
 ## 面试题汇总
 - [前端面试题及答案汇总](https://github.com/Advanced-Frontend/Daily-Interview-Question/blob/master/datum/summary.md)
