--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -622,6 +622,22 @@ function mergeSortHelper (left, right) {
 }
 ```
 
+## 多端开发
+1. 框架类型
+   1. 全包型: 渲染引擎, 布局引擎, DSL, 上层框架
+      1. Qt
+      1. Flutter
+   1. Web技术型: 自研布局引擎, 处理css/js, 然后分别使用各端的原生组件渲染
+      1. React Native
+      1. Weex
+   1. js编译型: 将DSL编译为各端代码
+      1. Taro
+      1. uni-app
+      1. mpvue
+      1. wepy
+      1. chameleon
+   - [小程序多端框架全面测评](https://juejin.im/post/5c90eb366fb9a070d4199cc9)
+
 ## 前端趋势
 1. TypeScript
 1. WebAssembly
