--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -137,6 +137,11 @@
    1. script标签 type="module"
    - [require/import](https://www.jianshu.com/p/f1e54dde30c8)
 7. this
+   1. 默认: window
+   1. 隐式: 对象方法调用
+   1. 显式: call, apply, bind
+   1. new: 生成的新对象
+   1. 箭头函数: 当前上下文
 8. 防抖/节流
    ```js
    // 防抖: 多次调用, 运行1次
@@ -208,6 +213,10 @@
    1. 单例模式
    1. 观察者模式
    1. 发布/订阅模式
+1. 编译原理
+   1. 词法分析
+   1. 语法解析 -> AST
+   1. 代码生成
 
 ## 综合
 1. 跨域
@@ -474,6 +483,27 @@ ref | 字符 | createRef(类), useRef(函数)
    1. 合理setData, 避免: 频繁调用, 传递大量新数据, 后台调用
    1. 减小代码包: 分包, 删掉无用代码和资源
    1. 预加载数据: 下一页面的数据在当前页面提前获取
+1. 父子组件通信
+   1. 父传子: properties
+   1. 子传父: triggerEvent
+1. 页面间传参:
+   1. 全局变量
+   1. url参数
+   1. 小程序存储数据
+1. template
+   1. <import src="xxx.wxml" />
+   1. <tempate is="xxx" />
+1. app生命周期
+   1. onLaunch
+   1. onShow
+   1. onHide
+   1. onError
+1. page生命周期
+   1. onLoad
+   1. onShow
+   1. onReady
+   1. onHide
+   1. onUnload
 - [微信小程序运行流程看这篇就够了](https://juejin.im/post/5afd136551882542682e6ad7)
 
 ## 全栈
