--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -298,7 +298,21 @@
    - [「前端进阶」高性能渲染十万条数据(虚拟列表)](https://cloud.tencent.com/developer/article/1533206)
 1. web安全
    1. XSS
+      1. 反射型: 恶意的url导致: url参数,搜索,跳转
+         - 对字符串编码
+      1. DOM型: 不可信的html片段
+         - 转义字符
+      1. 存储型: 恶意脚本保存到数据库中
+         - 服务端转义字符
+      > csp, 输入内容限制, cookie: http only
    1. CSRF
+      1. token
+      1. referer
+      1. 验证码
+      1. cookie samesite
+         1. none(默认)
+         1. lax: form GET发送, form POST,iframe,ajax,image.src不发送
+         1. strict: 完全不发送
    - [必须要懂的Web安全](https://juejin.im/post/5cd6ad7a51882568d3670a8e)
 1. 打包工具
    1. gulp
