--- a/前端自检.md
+++ b/前端自检.md
@@ -675,16 +675,15 @@ function deepCopy(object) {
 3. 手写函数柯里化/偏函数/组合函数 工具函数、并理解其应用场景和优势
 ```js
 // 柯里化
-function curry (fn) {
-  return function curried (...args) {
+function curry (fn, ...prevArgs) {
+  return function (...args) {
+    const newArgs = [...prevArgs, ...args];
     // 参数数量不足
-    if (args.length < fn.length) {
-      return function (...restArgs) {
-        return curried(...args, ...restArgs);
-      };
+    if (newArgs.length < fn.length) {
+      return curry(fn, ...newArgs);
     }
     else {
-      return fn(...args);
+      return fn(...newArgs);
     }
   };
 }
@@ -697,9 +696,10 @@ const curryLog = curry(toCurryLog);
 curryLog(1)(2, 3);
 
 // 偏函数
-function partial (fn, ...bindArgs) {
+function partial (fn, ...prevArgs) {
   return function (...args) {
-    return fn(...bindArgs, ...args);
+    const newArgs = [...prevArgs, ...args];
+    return fn(...newArgs);
   };
 }
 
