--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -36,21 +36,21 @@
    1. animation/keyframes
    1. transform
 1. CSS原生变量
-    ```less
-    .test {
-      // 定义
-      --color: #f00;
-      // 使用
-      color: var(--color);
-    }
-    ```
-    ```js
-    const el = document.querySelector('.test');
-    // 取值
-    getComputedStyle(el).getPropertyValue('--color');
-    // 设值
-    el.style.setProperty('--color', '#fff');
-    ```
+```less
+.test {
+  // 定义
+  --color: #f00;
+  // 使用
+  color: var(--color);
+}
+```
+```js
+const el = document.querySelector('.test');
+// 取值
+getComputedStyle(el).getPropertyValue('--color');
+// 设值
+el.style.setProperty('--color', '#fff');
+```
 1. 清除浮动
    1. 添加clear: both; 额外标签
    1. overflow: hidden;
@@ -86,20 +86,20 @@
    1. Script
    1. Local
    1. Block 
-    ```js
-    const scriptVar = 1;
-    window.globalVar = 1;
-    var globalVar2 = 1;
-    (function () {
-      const localVar = 1;
-      if (1) {
-        const blockVar = 1;
-        if (1) {
-          const blockVar2 = 1;
-        }
-      }
-    })();
-    ```
+```js
+const scriptVar = 1;
+window.globalVar = 1;
+var globalVar2 = 1;
+(function () {
+  const localVar = 1;
+  if (1) {
+    const blockVar = 1;
+    if (1) {
+      const blockVar2 = 1;
+    }
+  }
+})();
+```
 3. 变量提升
    1. let/const: 声明也会提升, 只是进入TDZ, 未初始化
    1. var: 声明和初始化都提升
@@ -110,28 +110,28 @@
    3. async: 异步加载, 加载完成后立刻执行, 乱序
    - [defer和async的区别](https://segmentfault.com/q/1010000000640869)
 5. new执行过程
-    ```js
-    function _new(Fn, ...args) {
-      let inst = {};
-      inst.__proto__ = Fn.prototype;
-      let res = Fn.apply(inst, args);
-      // 构造函数如显示返回对象, 结果取该值, 否则取inst
-      return res instanceof Object ? res : inst;
-    }
-    ```
+```js
+function _new(Fn, ...args) {
+  let inst = {};
+  inst.__proto__ = Fn.prototype;
+  let res = Fn.apply(inst, args);
+  // 构造函数如显示返回对象, 结果取该值, 否则取inst
+  return res instanceof Object ? res : inst;
+}
+```
 6. instanceof原理
-    ```js
-    function _instanceof (Fn, inst) {
-      let proto = inst.__proto__;
-      while (proto) {
-        if (Fn.prototype === proto) {
-          return true;
-        }
-        proto = proto.__proto__;
-      }
-      return false;
+```js
+function _instanceof (Fn, inst) {
+  let proto = inst.__proto__;
+  while (proto) {
+    if (Fn.prototype === proto) {
+      return true;
     }
-    ```
+    proto = proto.__proto__;
+  }
+  return false;
+}
+```
 6. 模块化
    1. esm, commonjs, amd
    1. script标签 type="module"
@@ -143,29 +143,29 @@
    1. new: 生成的新对象
    1. 箭头函数: 当前上下文
 8. 防抖/节流
-   ```js
-   // 防抖: 多次调用, 运行1次
-   function debounce (fn, timeout = 300) {
-     return function (...args) {
-       clearTimeout(fn._tid);
-       fn._tid = setTimeout(() => {
-         fn.call(this, ...args);
-       }, timeout);
-     };
-   }
-   
-   // 节流: 多次调用, 每个时间间隔运行1次
-   function throttle (fn, timeout = 300) {
-     let start = Date.now();
-     return function (...args) {
-       const now = Date.now();
-       if (now - start >= timeout) {
-         fn.call(this, ...args);
-         start = now;
-       }
-     };
-   }
-   ```
+```js
+// 防抖: 多次调用, 运行1次
+function debounce (fn, timeout = 300) {
+  return function (...args) {
+    clearTimeout(fn._tid);
+    fn._tid = setTimeout(() => {
+      fn.call(this, ...args);
+    }, timeout);
+  };
+}
+
+// 节流: 多次调用, 每个时间间隔运行1次
+function throttle (fn, timeout = 300) {
+  let start = Date.now();
+  return function (...args) {
+    const now = Date.now();
+    if (now - start >= timeout) {
+      fn.call(this, ...args);
+      start = now;
+    }
+  };
+}
+```
 9. ES6/ES7
    1. const/let
    2. 新数据类型: Set/Map
@@ -692,24 +692,45 @@ function mergeSortHelper (left, right) {
 
 ## 编程
 1. 如何实现提案中的flat函数（参数为几就拆解几层数组）
-    ```js
-    Array.prototype._flat = function (level) {
-      function helper (array, level) {
-        const res = [];
-        array.forEach((item) => {
-          if (level > 0 && Array.isArray(item)) {
-            res.push(...helper(item, level - 1));
-          }
-          else {
-            res.push(item);
-          }
-        });
-        return res;
+```js
+Array.prototype._flat = function (level) {
+  function helper (array, level) {
+    const res = [];
+    array.forEach((item) => {
+      if (level > 0 && Array.isArray(item)) {
+        res.push(...helper(item, level - 1));
       }
-    
-      return helper(this, level);
-    };
-    ```
+      else {
+        res.push(item);
+      }
+    });
+    return res;
+  }
+
+  return helper(this, level);
+};
+```
+
+1. 手动实现call、apply、bind
+```js
+Function.prototype._call = function(context, ...args) {
+  context = context || window;
+  context._fn = this;
+  const res = context._fn(...args);
+  delete context._fn;
+  return res;
+}
+Function.prototype._bind = function(context, ...args) {
+  const fn = this;
+  return function F(...curArgs) {
+    // 构造函数调用
+    if(this instanceof F) {
+      return new fn(...args, ...curArgs);
+    }
+    return fn.call(context, ...args, ...curArgs);
+  }
+}
+```
 
 ## 面试题汇总
 - [前端面试题及答案汇总](https://github.com/Advanced-Frontend/Daily-Interview-Question/blob/master/datum/summary.md)
