--- a/前端自检.md
+++ b/前端自检.md
@@ -727,23 +727,25 @@ shout('send in the clowns');
 4. 手写防抖和节流工具函数、并理解其内部原理和应用场景
 ```js
 // 防抖: 多次调用, 运行1次
-function debounce(fn, timeout = 300) {
-  clearTimeout(fn._tid);
-  fn._tid = setTimeout(fn, timeout);
+function debounce (fn, timeout = 300) {
+  return function (...args) {
+    clearTimeout(fn._tid);
+    fn._tid = setTimeout(() => {
+      fn.call(this, ...args);
+    }, timeout);
+  };
 }
 
 // 节流: 多次调用, 每个时间间隔运行1次
-function throttle(fn, timeout = 300) {
-  if (fn._pending) {
-    return;
-  }
-  
-  fn();
-  fn._pending = true;
-
-  setTimeout(() => {
-    fn._pending = false;
-  }, timeout);
+function throttle (fn, timeout = 300) {
+  let start = Date.now();
+  return function (...args) {
+    const now = Date.now();
+    if (now - start >= timeout) {
+      fn.call(this, ...args);
+      start = now;
+    }
+  };
 }
 ```
 
