--- a/前端知识汇总.md
+++ b/前端知识汇总.md
@@ -6,16 +6,16 @@
 - 得到的启发
 
 ## CSS
-1. 盒模型
-2. 水平垂直居中
-3. 布局
+- 盒模型
+- 水平垂直居中
+- 布局
    - 两栏, 三栏
    -[圣杯布局和双飞翼布局的理解与思考](https://www.jianshu.com/p/81ef7e7094e8)
-4. flex
+- flex
    1. flex-flow: flex-wrap, flex-direction
    2. flex: flex-grow, flex-shrink: 0(不缩小), flex-basis
    - [flex布局教程](http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html)
-5. BFC
+- BFC
    - 触发条件
       1. 根元素
       1. float: left/right
@@ -27,15 +27,15 @@
       2. 避免浮动元素被覆盖
       3. 解决高度塌陷
    - [学习 BFC](https://juejin.im/post/59b73d5bf265da064618731d)
-1. GPU加速
+- GPU加速
    1. translateZ(0)等3D属性
    1. will-change: all
-1. 选择器优先级
-7. CSS动画
+- 选择器优先级
+- CSS动画
    1. transition
    1. animation/keyframes
    1. transform
-1. CSS原生变量
+- CSS原生变量
 ```less
 .test {
   // 定义
@@ -44,7 +44,6 @@
   color: var(--color);
 }
 ```
-
 ```js
 const el = document.querySelector('.test');
 // 取值
@@ -52,11 +51,11 @@ getComputedStyle(el).getPropertyValue('--color');
 // 设值
 el.style.setProperty('--color', '#fff');
 ```
-1. 清除浮动
+- 清除浮动
    1. 添加clear: both; 额外标签
    1. overflow: hidden;
    1. :after + clear: both
-1. flex分别有哪些方法用于容器和项目
+- flex分别有哪些方法用于容器和项目
    1. 容器
       1. flex-flow (flex-direction, flex-wrap)
       1. align-items
@@ -66,7 +65,7 @@ el.style.setProperty('--color', '#fff');
       1. flex (flex-grow, flex-shrink, flex-basis)
       1. align-self
       1. order
-1. css性能优化
+- css性能优化
    1. 内联首屏css
    1. 异步加载非首屏css
    1. css文件压缩
@@ -78,11 +77,11 @@ el.style.setProperty('--color', '#fff');
    1. 使用硬件加速: will-change
 
 ## JavaScript
-1. 原型
+- 原型
 ```js
 inst.__proto__ === Fn.prototype
 ```
-2. 作用域
+- 作用域
    1. Global
    1. Script
    1. Local
@@ -101,16 +100,16 @@ var globalVar2 = 1;
   }
 })();
 ```
-3. 变量提升
+- 变量提升
    1. let/const: 声明也会提升, 只是进入TDZ, 未初始化
    1. var: 声明和初始化都提升
    - [从 JS 编译原理到作用域(链)及闭包](https://juejin.im/post/5ca995626fb9a05e1a7aabd8)
-4. script引入方式
+- script引入方式
    1. 默认: 加载和执行阻塞渲染
    2. defer: 异步加载, 且在DOMContentLoaded事件之后按序执行
    3. async: 异步加载, 加载完成后立刻执行, 乱序
    - [defer和async的区别](https://segmentfault.com/q/1010000000640869)
-5. new执行过程
+- new执行过程
 ```js
 function _new(Fn, ...args) {
   let inst = {};
@@ -120,7 +119,7 @@ function _new(Fn, ...args) {
   return res instanceof Object ? res : inst;
 }
 ```
-6. instanceof原理
+- instanceof原理
 ```js
 function _instanceof (Fn, inst) {
   let proto = inst.__proto__;
@@ -133,17 +132,17 @@ function _instanceof (Fn, inst) {
   return false;
 }
 ```
-6. 模块化
+- 模块化
    1. esm, commonjs, amd
    1. script标签 type="module"
    - [require/import](https://www.jianshu.com/p/f1e54dde30c8)
-7. this
+- this
    1. 默认: window
    1. 隐式: 对象方法调用
    1. 显式: call, apply, bind
    1. new: 生成的新对象
    1. 箭头函数: 当前上下文
-8. 防抖/节流
+- 防抖/节流
 ```js
 // 防抖: 多次调用, 运行1次
 function debounce (fn, timeout = 300) {
@@ -167,7 +166,7 @@ function throttle (fn, timeout = 300) {
   };
 }
 ```
-9. ES6/ES7
+- ES6/ES7
    1. const/let
    2. 新数据类型: Set/Map
    3. 类
@@ -175,24 +174,24 @@ function throttle (fn, timeout = 300) {
    5. 箭头函数
    6. Promise
    - [ES6、ES7、ES8、ES9、ES10新特性一览](https://juejin.im/post/5ca2e1935188254416288eb2)
-1. AST
+- AST
    1. recast
    - [AST 与前端工程化实战](https://juejin.im/post/5d50d1d9f265da03aa25607b)
-1. babel
+- babel
    1. 编译原理
    1. preset
    1. plugin
    1. polyfill
    - [一口(很长的)气了解 babel](https://juejin.im/post/5c19c5e0e51d4502a232c1c6)
-1. EventLoop
+- EventLoop
    1. 宏任务
    1. 微任务
    - [一次搞懂Event loop](https://www.jianshu.com/p/129ae19e47b7)
-1. 箭头函数
+- 箭头函数
    1. this: 当前上下文
    1. 无arguments
    1. 无prototype
-1. 内存泄露
+- 内存泄露
    1. 全局变量
    2. 不当的闭包
    3. 忘记关闭的定时器
@@ -200,13 +199,12 @@ function throttle (fn, timeout = 300) {
    5. 忘记释放的事件
    6. 忘记释放的DOM引用
    - [JavaScript内存泄露排查、垃圾回收理解、性能优化调试](https://www.jianshu.com/p/cc991f3217df)
-1. 内存回收
+- 内存回收
    1. 新生代: 将From(使用用)中的存活对象复制到To(空闲)中, From清空, 然后From和To互换
    1. 老生代: 标记清除算法
-1. Promise, async/await
+- Promise, async/await
    - [Promise开发文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
-- [「中高级前端面试」JavaScript手写代码无敌秘籍](https://juejin.im/post/5c9c3989e51d454e3a3902b6)
-1. 设计模式
+- 设计模式
    1. 原型模式
    1. 构造函数模式
    1. 混合模式
@@ -214,19 +212,21 @@ function throttle (fn, timeout = 300) {
    1. 单例模式
    1. 观察者模式
    1. 发布/订阅模式
-1. 编译原理
+- 编译原理
    1. 词法分析
    1. 语法解析 -> AST
    1. 代码生成
+   
+- [「中高级前端面试」JavaScript手写代码无敌秘籍](https://juejin.im/post/5c9c3989e51d454e3a3902b6)
 
 ## 综合
-1. 跨域
+- 跨域
    1. jsonp
    1. cors
    1. postMessage
    1. iframe
    1. 代理: devServer/后端/Nginx
-1. 性能优化
+- 性能优化
    1. 网络
       1. 减少http请求次数
          1. 合并静态资源, 雪碧图, combo服务
@@ -265,7 +265,7 @@ function throttle (fn, timeout = 300) {
       1. 避免使用table/iframe
    - [前端性能优化最佳实践](https://csspod.com/frontend-performance-best-practices/)
    - [前端那些事儿」② 极限性能优化](https://juejin.im/post/59ff2dbe5188254dd935c8ab)
-1. 首屏计算
+- 首屏计算
    1. starttime: performance.timing.navigationStart
    1. endtime
       1. domContentLoadedEventEnd
@@ -276,13 +276,13 @@ function throttle (fn, timeout = 300) {
       1. 连续截图对比
       1. 首屏模块标签标记
       1. 自定义时间
-1. 首屏优化
+- 首屏优化
    1. 首屏css/js分割, 非首屏代码异步加载, 懒加载
    1. 内联首屏css/js
    1. 合理缓存: localStorage, ServiceWorker
    1. SSR
    1. 视觉感知优化: loading, 骨架屏, 任务异步分割
-1. 网站高并发性能调优
+- 网站高并发性能调优
    1. 找到性能瓶颈: 程序 or 数据库, 针对性解决
    1. 使用队列
    1. 使用缓存: 页面缓存, redis
@@ -293,11 +293,11 @@ function throttle (fn, timeout = 300) {
    1. 图片服务器分离: 图片耗服务器资源
    1. 使用分布式集群
    1. 页面静态化
-1. 长列表优化(虚拟列表)
+- 长列表优化(虚拟列表)
    1. 可视区域
    1. 可滚动区域
    - [「前端进阶」高性能渲染十万条数据(虚拟列表)](https://cloud.tencent.com/developer/article/1533206)
-1. web安全
+- web安全
    1. XSS
       1. 反射型: 恶意的url导致: url参数,搜索,跳转
          - 对字符串编码
@@ -315,14 +315,14 @@ function throttle (fn, timeout = 300) {
          1. lax: form GET发送, form POST,iframe,ajax,image.src不发送
          1. strict: 完全不发送
    - [必须要懂的Web安全](https://juejin.im/post/5cd6ad7a51882568d3670a8e)
-1. 打包工具
+- 打包工具
    1. gulp
    1. rollup
    1. fis
-1. http缓存
+- http缓存
    - 强缓存: Cache-Control, Expires
    - 协商缓存: Last-Modified(If-Modified-Since), ETag(If-None-Match)
-1. 异常监控
+- 异常监控
    1. onerror
    1. onunhandledrejection
    1. iframe: 同域: iframeEl.onerror, 跨域: postMessage
@@ -333,65 +333,67 @@ function throttle (fn, timeout = 300) {
    - [前端异常监控、上报及js压缩代码定位](https://juejin.im/post/5b55c3495188251acb0cf907)
    1. Vue异常: Vue.config.errorHandler
    1. React异常: componentDidCatch
-1. 性能监控
+- 性能监控
    1. 页面加载: performance.getEntriesByType('navigation')
    2. 资源加载: performance.getEntriesByType('resource')
    - [5 分钟撸一个前端性能监控工具](https://juejin.im/post/5b7a50c0e51d4538af60d995)
-1. WebWorker
-1. ServiceWorker
+- WebWorker
+- ServiceWorker
    1. 注册
    1. install事件缓存文件
    1. 拦截请求读取缓存
-1. CDN原理
+- CDN原理
    1. 负载均衡
    1. 动态分发和复制
    1. 缓存
    > CDN网络是在用户和服务器之间增加Cache层，主要是通过接管DNS实现，将用户的请求引导到Cache上获得源服务器的数据，从而降低网络的访问的速度。
    
 ## 移动端
-1. 移动端与PC端区别
+- 移动端与PC端区别
    1. 屏幕尺寸
    1. 操作方式
    1. 传感器
    1. 性能
    - [PC端和移动端的区别你知道吗？](https://www.jianshu.com/p/a227659401c4)
-1. 移动端布局
+- 移动端布局
    1. viewport
    1. rem
    - [如何利用vw+rem进行移动端布局](https://juejin.im/post/5b29f476e51d455892718380)
-1. 1px边框
+- 1px边框
    - transform: scale(0.5)
    - box-shadow
    - border-image
    - 0.5px   
+
 - [web移动端常问面试题](https://juejin.im/post/5aa001306fb9a028c3685a79)
    
 ## Webpack
-1. 核心概念
+- 核心概念
    1. entry
    1. output
    1. module
    1. chunck
    1. loader
    1. plugin
-2. 编译优化
+- 编译优化
    1. 缩小编译范围: exclude, 无必要的loader
    1. 多线程: webpack-parallel-uglify-plugin: 并发压缩, HappyPack: 并发loader解析
    1. source-map: 开发: cheap-module-eval-source-map, 生产: hidden-source-map
    1. 分析: profile: true, 对耗时进行监控
   
 ## Vue
-1. vuex
+- vuex
    1. state
    1. mutations
    1. actions
    1. getters
    1. modules
+
 - [12道vue高频原理面试题](https://juejin.im/post/5e04411f6fb9a0166049a073)
 - [Vuex面试题汇总](https://juejin.im/post/5dba91e4518825647e4ef18b)
 
 ## React
-1. react性能优化
+- react性能优化
    > react-addons-perf性能工具
    1. 合理规划state, 避免不必要的render调用
    1. 重写shouldComponentUpdate避免重复渲染
@@ -400,16 +402,17 @@ function throttle (fn, timeout = 300) {
    1. 合并状态更新, 避免多次渲染
    1. 使用函数组件
    1. 使用PureComponent
-1. react setstate为什么是异步的
+- react setstate为什么是异步的
    1. 保持内部一致性
    1. 能够使用并发更新，从而优化性能
    - [为什么React.setState是异步的？](https://www.jianshu.com/p/c19e259870a5)
+
 - [35 道咱们必须要清楚的 React 面试题](https://juejin.im/post/5dc20a4ff265da4d4e30040b)
 - [React Fiber 原理介绍](https://segmentfault.com/a/1190000018250127?utm_source=tag-newest)
 - [react hooks 使用](https://segmentfault.com/a/1190000019513907)
 
 ## Vue/React
-1. Vue与React对比
+- Vue与React对比
 
 不同点 | Vue | React
 ---|---|---
@@ -440,13 +443,13 @@ ref | 字符 | createRef(类), useRef(函数)
 - [NodeJS有难度的面试题，你能答对几个？](https://juejin.im/post/5d2fc598e51d4577596487a3)
 
 ## 浏览器
-1. 浏览器缓存
+- 浏览器缓存
    1. ServiceWorker
    1. MemoryCache
    1. DiskCache
    1. PushCache: 仅会话中
    - [深入理解浏览器的缓存机制](https://www.jianshu.com/p/54cc04190252)
-1. 浏览器组成
+- 浏览器组成
    1. 用户界面: 地址栏, 前进后退按钮等
    1. 浏览器引擎: 提供渲染引擎高级接口
    1. 渲染引擎: 将URI可视化展示
@@ -456,7 +459,7 @@ ref | 字符 | createRef(类), useRef(函数)
       1. 显示后端
    1. 数据持久层: cookie, 证书, 缓存等
    - [浏览器的组成部分及运行原理](https://www.jianshu.com/p/e4a75cb6f268)
-1. 输入URL到渲染过程
+- 输入URL到渲染过程
    1. DNS解析: 域名解析为IP
       1. 浏览器DNS缓存
       1. 操作系统
@@ -476,7 +479,7 @@ ref | 字符 | createRef(类), useRef(函数)
       1. render树 -> 绘制渲染所有节点
       - [浏览器渲染原理与过程](https://www.jianshu.com/p/e6252dc9be32)
    - [浏览器从输入URL到渲染完页面的整个过程](https://www.cnblogs.com/qing-5/p/11126524.html)
-1. 如何提升渲染性能
+- 如何提升渲染性能
    1. 样式在head, 脚本在body结束前, 防止阻塞
    1. 简化和优化css选择器, 减少嵌套
    1. 合并DOM操作
@@ -487,95 +490,97 @@ ref | 字符 | createRef(类), useRef(函数)
    1. 使用visibility
    1. 先将元素display: none, 再进行DOM操作
    1. 使用requestAnimationFrame
+
 - [你不知道的浏览器页面渲染机制](https://juejin.im/post/5ca0c0abe51d4553a942c17d)
 
 ## 小程序
-1. 架构
+- 架构
    1. 多个视图层: 渲染页面
    1. 一个逻辑层: 处理逻辑
    1. native系统层: jsbridge连接视图层和逻辑层通信
-1. 优化建议
+- 优化建议
    1. 合理setData, 避免: 频繁调用, 传递大量新数据, 后台调用
    1. 减小代码包: 分包, 删掉无用代码和资源
    1. 预加载数据: 下一页面的数据在当前页面提前获取
-1. 父子组件通信
+- 父子组件通信
    1. 父传子: properties
    1. 子传父: triggerEvent
-1. 页面间传参:
+- 页面间传参
    1. 全局变量
    1. url参数
    1. 小程序存储数据
-1. template
+- template
    1. <import src="xxx.wxml" />
    1. <tempate is="xxx" />
-1. app生命周期
+- app生命周期
    1. onLaunch
    1. onShow
    1. onHide
    1. onError
-1. page生命周期
+- page生命周期
    1. onLoad
    1. onShow
    1. onReady
    1. onHide
    1. onUnload
+
 - [微信小程序运行流程看这篇就够了](https://juejin.im/post/5afd136551882542682e6ad7)
 
-## 全栈
-1. Nginx
+## 服务端
+- Nginx
    1. 配置静态服务器
    2. 代理配置: proxy_pass
-1. Nginx如何实现高并发
+- Nginx如何实现高并发
    1. 异步, 非阻塞
    1. 多进程(单master+多worker)
 
 ## 网络
-1. HTTP2
+- HTTP2
    1. 二进制分帧: Frame Header, Frame Payload
    1. 多路复用: 帧(Stream Identifier)和流
    1. 头部压缩: 静态字典, 动态字典
    1. 服务器推送: index.html可推送index.css, 减少通信次数
    - [HTTP2简介](https://juejin.im/post/5aaccf8f51882555784dbabc)
-2. HTTPS握手过程
+- HTTPS握手过程
    1. client hello: 支持的SSL版本和加密组件列表(加密算法及密钥长度等)
    2. server hello: 选择的SSL版本和加密组件; 并发送证书(含服务器公钥); hello done
    3. client key exchange: 随机密码串(使用服务器公钥加密); finished
    4. 随后开始使用随机密码串加密传输
    - [HTTPS详解](https://www.jianshu.com/p/4764825fb916)
-1. SSL证书
+- SSL证书
    1. 域名型(DV)
    2. 企业型(OV)
    3. 增强型(EV)
    - [https原理和SSL证书类型](https://www.jianshu.com/p/eae7ba2ecba8)
-3. HTTPS 握手过程中，客户端如何验证证书的合法性
+- HTTPS 握手过程中，客户端如何验证证书的合法性
    1. 客户端取出提前内置在手机内部的认证机构的公钥
    2. 客户端用 认证机构的公钥去 解密 服务器证书, 从而得到数字指纹
    3. 客户端对 服务器证书 进行数字摘要算法, 从而生成数字指纹
    4. 对比客户端自己生成的数字指纹(第3步)和解密得到的数字指纹(第2步)是否一致 如果一致则公钥证书验证通过
-4. CORS
+- CORS
    1. Access-Control-Allow-Origin: * | origin
    1. Access-Control-Allow-Credentials: true; 
    1. xhr.withCredentials = true;
    - [CORS开发文档](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
    - [跨域时的options请求](https://www.jianshu.com/p/5cf82f092201)
-5. TCP三次握手
+- TCP三次握手
    1. 客户端 -> 服务端: SYN; SYN-SENT
    2. 服务端 -> 客户端: ACK,SYN; SYN-RCVD
    3. 客户端 -> 服务端: ACK; ESTABLISHED
    - [理解TCP](https://www.jianshu.com/p/ca64764e4a26)
-6. TCP四次挥手
+- TCP四次挥手
    1. 客户端 -> 服务端: FIN; FIN-WAIT
    2. 服务端 -> 客户端: ACK; CLOSE-WAIT
    3. 服务端 -> 客户端: FIN,ACK; LAST-ACK
    4. 客户端 -> 服务端: ACK; 2MSL(最长报文寿命)后关闭, CLOSED
-1. TCP与UDP的区别
+- TCP与UDP的区别
    1. TCP面向连接; UDP是无连接的, 发送数据前不需要建立连接
    1. TCP提供可靠服务; UDP尽最大努力交付, 不保证可靠交付
    1. UDP有较高的实时性, 效率比TCP高, 适用于实时高速传输
    1. TCP连接只能点到点; UDP支持多对多通信
    1. TCP资源要求较多; UCP较少
-1. [TCP拥塞控制机制](https://blog.csdn.net/shuxnhs/article/details/80644531)
-1. 讲述一下计算机网络的七层
+- [TCP拥塞控制机制](https://blog.csdn.net/shuxnhs/article/details/80644531)
+- 讲述一下计算机网络的七层
    1. 应用层
    1. 表示层
    1. 会话层
@@ -585,13 +590,13 @@ ref | 字符 | createRef(类), useRef(函数)
    1. 物理层
    
 ## 算法
-1. 冒泡排序
-2. 快速排序
-3. 二分查找
-1. 两数之和
-1. 反转链表
-1. 合并两个有序链表
-1. 二叉树的最大深度
+- 冒泡排序
+- 快速排序
+- 二分查找
+- 两数之和
+- 反转链表
+- 合并两个有序链表
+- 二叉树的最大深度
 - [上LeetCode刷题吧](https://leetcode-cn.com/problemset/all/): 一般只考简单,中等难度
 ```js
 // 冒泡排序
@@ -668,7 +673,7 @@ function mergeSortHelper (left, right) {
 ```
 
 ## 多端开发
-1. 框架类型
+- 框架类型
    1. 全包型: 渲染引擎, 布局引擎, DSL, 上层框架
       1. Qt
       1. Flutter
@@ -684,15 +689,16 @@ function mergeSortHelper (left, right) {
    - [小程序多端框架全面测评](https://juejin.im/post/5c90eb366fb9a070d4199cc9)
 
 ## 前端趋势
-1. TypeScript
-1. WebAssembly
-1. 跨端小程序开发: taro, uni-app
-1. 跨端native开发: electron; weex, react-native, flutter
+- TypeScript
+- WebAssembly
+- 跨端小程序开发: taro, uni-app
+- 跨端native开发: electron; weex, react-native, flutter
+
 - [2019年前端大事件回顾：流年笑掷，未来可期](https://juejin.im/post/5def782ce51d4558181d27ce)
 - [2020年大前端发展趋势](https://juejin.im/post/5ddb487ce51d452349622d7f)
 
 ## 编程
-1. 如何实现提案中的flat函数（参数为几就拆解几层数组）
+- 如何实现提案中的flat函数（参数为几就拆解几层数组）
 ```js
 Array.prototype._flat = function (level) {
   function helper (array, level) {
@@ -712,7 +718,7 @@ Array.prototype._flat = function (level) {
 };
 ```
 
-1. 手动实现call、apply、bind
+- 手动实现call、apply、bind
 ```js
 Function.prototype._call = function(context, ...args) {
   context = context || window;
