--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -7,7 +7,18 @@
 
 ## CSS
 - 盒模型
+   1. margin
+   1. border
+   1. padding
+   1. content
+   > content不包含其他部分, IE为border-box
 - 水平垂直居中
+   1. text-align: center, line-height
+   1. table-cell
+   1. flex, justify-content: center; align-items: center;
+   1. absolute, left: 50%; top: 50%; 负margin
+   1. absolute, left: 50%; top: 50%; translate(-50%,-50%)
+   1. grid, justify-self: center; align-self: center;
 - 布局
    - 两栏, 三栏
    -[圣杯布局和双飞翼布局的理解与思考](https://www.jianshu.com/p/81ef7e7094e8)
@@ -31,6 +42,8 @@
    1. translateZ(0)等3D属性
    1. will-change: all
 - 选择器优先级
+   1. 优先级: !import > id > class > tag > * > inherit > useragent
+   1. 位置: 行内 > 内联 > 外部 > @import;
 - CSS动画
    1. transition
    1. animation/keyframes
@@ -106,7 +119,7 @@ var globalVar2 = 1;
    - [从 JS 编译原理到作用域(链)及闭包](https://juejin.im/post/5ca995626fb9a05e1a7aabd8)
 - script引入方式
    1. 默认: 加载和执行阻塞渲染
-   2. defer: 异步加载, 且在DOMContentLoaded事件之后按序执行
+   2. defer: 异步加载, 且在DOMContentLoaded事件之后顺序执行
    3. async: 异步加载, 加载完成后立刻执行, 乱序
    - [defer和async的区别](https://segmentfault.com/q/1010000000640869)
 - new执行过程
@@ -216,6 +229,96 @@ function throttle (fn, timeout = 300) {
    1. 词法分析
    1. 语法解析 -> AST
    1. 代码生成
+- 实现提案中的flat函数（参数为几就拆解几层数组）
+```js
+Array.prototype._flat = function (level) {
+  function helper (array, level) {
+    const res = [];
+    array.forEach((item) => {
+      if (level > 0 && Array.isArray(item)) {
+        res.push(...helper(item, level - 1));
+      }
+      else {
+        res.push(item);
+      }
+    });
+    return res;
+  }
+
+  return helper(this, level);
+};
+```
+- 手动实现call、apply、bind
+```js
+Function.prototype._call = function(context, ...args) {
+  context = context || window;
+  context._fn = this;
+  const res = context._fn(...args);
+  delete context._fn;
+  return res;
+}
+Function.prototype._bind = function(context, ...prevArgs) {
+  const fn = this;
+  return function F(...args) {
+    const newArgs = [...prevArgs, ...args];
+    // 构造函数调用
+    if(this instanceof F) {
+      return new fn(...newArgs);
+    }
+    return fn.call(context, ...newArgs);
+  }
+}
+```
+- 手写函数柯里化/偏函数/组合函数 工具函数、并理解其应用场景和优势
+```js
+// 柯里化
+function curry (fn, ...prevArgs) {
+  return function (...args) {
+    const newArgs = [...prevArgs, ...args];
+    // 参数数量不足
+    if (newArgs.length < fn.length) {
+      return curry(fn, ...newArgs);
+    }
+    else {
+      return fn(...newArgs);
+    }
+  };
+}
+
+function toCurryLog (a, b, c) {
+  console.log(`${a},${b},${c}`);
+}
+
+const curryLog = curry(toCurryLog);
+curryLog(1)(2, 3);
+
+// 偏函数
+function partial (fn, ...prevArgs) {
+  return function (...args) {
+    const newArgs = [...prevArgs, ...args];
+    return fn(...newArgs);
+  };
+}
+
+function toPartialLog (a, b, c) {
+  console.log(`${a},${b},${c}`);
+}
+
+const partialLog = partial(toPartialLog, 1, 2);
+partialLog(3);
+
+// 组合
+function compose (...fns) {
+  return (value) => {
+    return fns.reduceRight((prev, fn) => fn(prev), value);
+  };
+}
+
+var toUpperCase = function (x) { return x.toUpperCase(); };
+var exclaim = function (x) { return x + '!'; };
+var shout = compose(exclaim, toUpperCase);
+shout('send in the clowns');
+```
    
 - [「中高级前端面试」JavaScript手写代码无敌秘籍](https://juejin.im/post/5c9c3989e51d454e3a3902b6)
 
@@ -305,7 +408,7 @@ function throttle (fn, timeout = 300) {
          - 转义字符
       1. 存储型: 恶意脚本保存到数据库中
          - 服务端转义字符
-      > csp, 输入内容限制, cookie: http only
+      > 输入内容限制, cookie: http only
    1. CSRF
       1. token
       1. referer
@@ -323,13 +426,14 @@ function throttle (fn, timeout = 300) {
    - 强缓存: Cache-Control, Expires
    - 协商缓存: Last-Modified(If-Modified-Since), ETag(If-None-Match)
 - 异常监控
-   1. onerror
-   1. onunhandledrejection
-   1. iframe: 同域: iframeEl.onerror, 跨域: postMessage
-   1. js跨域: crossorigin="anonymous", Access-Control-Allow-Origin: * | origin
-   1. 压缩代码: 开启source-map
-   1. 合并上报
-   1. 分析及合理的警报
+   1. onerror: js报错
+   1. onunhandledrejection: Promise异常
+   1. XMLHttpRequest原型劫持: 网络请求异常
+   1. iframe中的异常: 同域: iframeEl.onerror, 跨域: postMessage
+   - js跨域: crossorigin="anonymous", Access-Control-Allow-Origin: * | origin
+   - 压缩代码: 开启source-map
+   - 合并上报
+   - 分析及合理的警报
    - [前端异常监控、上报及js压缩代码定位](https://juejin.im/post/5b55c3495188251acb0cf907)
    1. Vue异常: Vue.config.errorHandler
    1. React异常: componentDidCatch
@@ -337,9 +441,17 @@ function throttle (fn, timeout = 300) {
    1. 页面加载: performance.getEntriesByType('navigation')
    2. 资源加载: performance.getEntriesByType('resource')
    - [5 分钟撸一个前端性能监控工具](https://juejin.im/post/5b7a50c0e51d4538af60d995)
+- Timing
+   ![iamge](./images/timestamp-diagram.svg)
+   1. DNS
+   1. TCP
+   1. Request
+   1. Response
+   1. DOM
+   1. Load
 - WebWorker
 - ServiceWorker
-   1. 注册
+   1. 注册ServiceWorker
    1. install事件缓存文件
    1. 拦截请求读取缓存
 - CDN原理
@@ -696,48 +808,6 @@ function mergeSortHelper (left, right) {
 
 - [2019年前端大事件回顾：流年笑掷，未来可期](https://juejin.im/post/5def782ce51d4558181d27ce)
 - [2020年大前端发展趋势](https://juejin.im/post/5ddb487ce51d452349622d7f)
-
-## 编程
-- 如何实现提案中的flat函数（参数为几就拆解几层数组）
-```js
-Array.prototype._flat = function (level) {
-  function helper (array, level) {
-    const res = [];
-    array.forEach((item) => {
-      if (level > 0 && Array.isArray(item)) {
-        res.push(...helper(item, level - 1));
-      }
-      else {
-        res.push(item);
-      }
-    });
-    return res;
-  }
-
-  return helper(this, level);
-};
-```
-
-- 手动实现call、apply、bind
-```js
-Function.prototype._call = function(context, ...args) {
-  context = context || window;
-  context._fn = this;
-  const res = context._fn(...args);
-  delete context._fn;
-  return res;
-}
-Function.prototype._bind = function(context, ...args) {
-  const fn = this;
-  return function F(...curArgs) {
-    // 构造函数调用
-    if(this instanceof F) {
-      return new fn(...args, ...curArgs);
-    }
-    return fn.call(context, ...args, ...curArgs);
-  }
-}
-```
 
 ## 面试题汇总
 - [前端面试题及答案汇总](https://github.com/Advanced-Frontend/Daily-Interview-Question/blob/master/datum/summary.md)
