--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -443,12 +443,15 @@ shout('send in the clowns');
    - [5 分钟撸一个前端性能监控工具](https://juejin.im/post/5b7a50c0e51d4538af60d995)
 - Timing
    ![iamge](./images/timestamp-diagram.svg)
+   ![iamge](./images/timestamp-diagram-rsc.svg)
+   - Unload
+   1. Redirect
    1. DNS
    1. TCP
    1. Request
    1. Response
-   1. DOM
-   1. Load
+   - DOM
+   - Load
 - WebWorker
 - ServiceWorker
    1. 注册ServiceWorker
