--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -455,8 +455,8 @@ shout('send in the clowns');
 - WebWorker
 - ServiceWorker
    1. 注册ServiceWorker
-   1. install事件缓存文件
-   1. 拦截请求读取缓存
+   1. install或fetch事件缓存文件
+   1. fetch事件拦截请求读取缓存
 - CDN原理
    1. 负载均衡
    1. 动态分发和复制
