--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -352,7 +352,7 @@ shout('send in the clowns');
          1. 合并多次DOM操作
          1. 合并多次样式操作
          1. 先将元素display: none, 进行多次操作, 再恢复显示
-         1. 需要重排获取到的样式属性, 储存下来
+         1. 缓存需要重排获取到的样式属性
          1. 使用离线DOM(documentFragment)
          1. 绝对定位
          1. 使用visibility
@@ -360,6 +360,8 @@ shout('send in the clowns');
       1. 减少js动画, 使用css动画(transform)
       1. GPU加速
       1. 使用requestAnimationFrame, requestIdleCallback重新渲染
+      1. 样式在head, 脚本在body结束前, 防止阻塞
+      1. 简化和优化css选择器, 减少嵌套
    1. 性能
       1. css放头部, js放脚部
       1. 避免css import
@@ -466,13 +468,15 @@ shout('send in the clowns');
 ## 移动端
 - 移动端与PC端区别
    1. 屏幕尺寸
-   1. 操作方式
-   1. 传感器
-   1. 性能
+   1. 操作方式: 触摸, 手势
+   1. 传感器: 重力感应
+   1. 性能: 渲染性能可能较低
+   1. 网速, 续航
    - [PC端和移动端的区别你知道吗？](https://www.jianshu.com/p/a227659401c4)
 - 移动端布局
    1. viewport
    1. rem
+   - 750px宽度设计稿, root font-size: 13.333333vw
    - [如何利用vw+rem进行移动端布局](https://juejin.im/post/5b29f476e51d455892718380)
 - 1px边框
    - transform: scale(0.5)
@@ -531,7 +535,8 @@ shout('send in the clowns');
 
 不同点 | Vue | React
 ---|---|---
-核心思想 | html,css,js三层设计; 使用Object.defineProperty精准监听数据, 组件级别更新渲染 | jsx语法, all in js; 调用setState或者props变化时, 所有组件render运算, 再diff更新渲染
+核心思想 | html,css,js三层设计 | jsx语法, all in js
+响应原理 | 使用Object.defineProperty精准监听数据, 组件级别更新渲染 | 调用setState或者props变化时, 组件及所有子组件render运算, 再diff更新渲染
 组件形式 | .vue单文件 | 函数/类组件
 数据管理 | props, data | props, state(类组件), useState(函数组件)
 父子组件通信 | props, $emit | props, props传递的回调函数
@@ -539,9 +544,9 @@ shout('send in the clowns');
 class/style | class,style, 支持对象/字符/数组 | className,style
 生命周期 | beforeCreate,created beforeMount,mounted beforeUpdate,updated beforeDestroy,destroyed |  初始化: constructor  挂载: getDerivedStateFromProps => render => componentDidMount  更新: getDerivedStateFromProps => shoudeComponentUpdate => render => getSnapshotBeforeUpdate => componentDidUpdate  卸载: componentWillUnmount
 事件 | @type, 修饰符, $event | onType
-条件渲染 | v-if | &&,三目运算,多重判断
-是否显示 | v-show | style/className
-列表渲染 | v-for | map
+条件渲染 | v-if指令 | &&,三目运算,多重判断
+是否显示 | v-show指令 | style/className
+列表渲染 | v-for指令 | map
 计算属性 | computed | useMemo
 侦听器 | watch | getDerivedStateFromProps, componentDidUpdate
 ref | 字符 | createRef(类), useRef(函数)
@@ -594,17 +599,6 @@ ref | 字符 | createRef(类), useRef(函数)
       1. render树 -> 绘制渲染所有节点
       - [浏览器渲染原理与过程](https://www.jianshu.com/p/e6252dc9be32)
    - [浏览器从输入URL到渲染完页面的整个过程](https://www.cnblogs.com/qing-5/p/11126524.html)
-- 如何提升渲染性能
-   1. 样式在head, 脚本在body结束前, 防止阻塞
-   1. 简化和优化css选择器, 减少嵌套
-   1. 合并DOM操作
-   1. 合并样式操作
-   1. 缓存读取到的会引起重排的样式
-   1. 使用transform形变和位移
-   1. 使用离线DOM(documentFragment)
-   1. 使用visibility
-   1. 先将元素display: none, 再进行DOM操作
-   1. 使用requestAnimationFrame
 
 - [你不知道的浏览器页面渲染机制](https://juejin.im/post/5ca0c0abe51d4553a942c17d)
 
@@ -695,6 +689,8 @@ ref | 字符 | createRef(类), useRef(函数)
    1. TCP连接只能点到点; UDP支持多对多通信
    1. TCP资源要求较多; UCP较少
 - [TCP拥塞控制机制](https://blog.csdn.net/shuxnhs/article/details/80644531)
+   1. 慢启动: 指数增长
+   1. 拥塞避免: 线性增长, 关小拥塞窗口
 - 讲述一下计算机网络的七层
    1. 应用层
    1. 表示层
@@ -789,7 +785,7 @@ function mergeSortHelper (left, right) {
 
 ## 多端开发
 - 框架类型
-   1. 全包型: 渲染引擎, 布局引擎, DSL, 上层框架
+   1. 全包型: 自研渲染引擎,布局引擎,DSL,上层框架
       1. Qt
       1. Flutter
    1. Web技术型: 自研布局引擎, 处理css/js, 然后分别使用各端的原生组件渲染
@@ -806,8 +802,7 @@ function mergeSortHelper (left, right) {
 ## 前端趋势
 - TypeScript
 - WebAssembly
-- 跨端小程序开发: taro, uni-app
-- 跨端native开发: electron; weex, react-native, flutter
+- 跨端开发: Flutter, React Native, uni-app/Taro
 
 - [2019年前端大事件回顾：流年笑掷，未来可期](https://juejin.im/post/5def782ce51d4558181d27ce)
 - [2020年大前端发展趋势](https://juejin.im/post/5ddb487ce51d452349622d7f)
