--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -319,6 +319,46 @@ var exclaim = function (x) { return x + '!'; };
 var shout = compose(exclaim, toUpperCase);
 shout('send in the clowns');
 ```
+- 手写一个EventEmitter实现事件发布、订阅
+```js
+class EventEmitter {
+  constructor () {
+    this.events = {};
+  }
+
+  on (type, fn) {
+    const typeFns = this.events[type] || (this.events[type] = []);
+    typeFns.push(fn);
+    return this;
+  }
+
+  once (type, fn) {
+    const tmpFn = (...args) => {
+      fn.call(this, ...args);
+      this.off(type, tmpFn);
+    };
+    this.on(type, tmpFn);
+    return this;
+  }
+
+  emit (type, ...args) {
+    const typeFns = this.events[type] || [];
+    typeFns.forEach((fn) => fn.call(this, ...args));
+    return this;
+  }
+
+  off (type, fn) {
+    if (fn === undefined) {
+      this.events[type] = null;
+    }
+    else {
+      const typeFns = this.events[type] || [];
+      typeFns.splice(typeFns.indexOf(fn), 1);
+    }
+    return this;
+  }
+}
+```
    
 - [「中高级前端面试」JavaScript手写代码无敌秘籍](https://juejin.im/post/5c9c3989e51d454e3a3902b6)
 
